--- a/MinimumSpan_Prime/MinimumSpan_Prime.csproj
+++ b/MinimumSpan_Prime/MinimumSpan_Prime.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Graph.cs" />
+    <Compile Include="Graphset.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
